--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+:root{
+    --bg-color: #f7f3f5;
+    --btn-color: #687477;
+    --bgLightColor: #e2c2b3;
+    --nextColor: #403234;
+
+}
 
 .container{
     height: 100vh;
@@ -22,7 +29,7 @@ section{
 }
 .home{
     position: relative;
-    background: #55838f;
+    background: var(--bg-color);
 }
 .navigation{
     position: absolute;
@@ -63,20 +70,20 @@ section{
     font-size: 1.5em;
     transition: 0.5s;
     text-align: center;
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--btn-color);
 }
 .navigation ul li a:hover .icon{
-    color: rgba(255, 255, 255, 1);
+    color: var(--nextColor);
 }
 .navigation ul li.active a .icon{
-    color: #7a29fd;
+    color: var(--nextColor);
     transform: translateY(-8px);
 }
 .navigation ul li a .text{
     position: absolute;
     font-weight: 600;
-    font-size: 0.6em;
-    color: #fff;
+    font-size: 0.7em;
+    color: var(--nextColor);
     text-transform: uppercase;
     transform: translateY(0px);
     letter-spacing: 0.05em;
@@ -91,7 +98,7 @@ section{
 }
 .indicator{
     position: absolute;
-    width: 80px;
+    width: 90px;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -104,10 +111,10 @@ section{
     content: '';
     position: absolute;
     bottom: 14px;
-    width: 80%;
+    width: 100%;
     height: 16px;
-    background: #7a29fd;
-    border-radius: 10px;
+    background: var(--bgLightColor);
+    border-radius: 0.75rem;
 }
 .navigation ul li:nth-child(2).active ~ .indicator{
     transform: translateX(calc(80px * 1));
