--- a/style.css
+++ b/style.css
@@ -24,15 +24,13 @@ section{
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
     scroll-snap-align: start;
 }
 .home{
     position: relative;
-    background: var(--bg-color);
 }
 .navigation{
-    position: absolute;
+    position: fixed;
     top: 1px;
     width: 350px;
     height: 80px;
@@ -122,11 +120,167 @@ section{
 .navigation ul li:nth-child(3).active ~ .indicator{
     transform: translateX(calc(80px * 2));
 }
+.login-area{
+    position: relative;
+    top: 80px;
+    width: 100%;
+    height: calc(100% - 80px);
+    background: var(--bgLightColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.login-page{
+    position: relative;
+    background-color: var(--bg-color); 
+    width: 768px;
+    overflow: hidden;
+    max-width: 100%;
+    min-height: 480px;
+    border-radius: 0.6rem;
+    box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.35);
+    
+}
+.login-page button{
+    background-color: var(--btn-color);
+    color: #fff;
+    padding: 10px 20px;
+    border: 1px solid transparent;
+    border-radius: 0.6rem;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.login-page button.hidden{
+    background-color: transparent;
+    border-color: #fff;
 
+}
+.login-page button.hidden:hover{
+    background-color: #9298ca;
+}
+
+.login-page form{
+    background-color: var(--bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+    padding: 20px ;
+    height: 100%;
+}
+.login-page input{
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    border-radius: 0.6rem;
+    width: 100%;
+    outline: none;
+}
+.form-container{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+.sign-in{
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+.login-page.active .sign-in{
+    transform: translateX(100%);
+}
+.sign-up{
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+}
+.login-page.active .sign-up{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+}
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 100px 0 0 100px;
+}
+.login-page.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 0 100px 100px 0;
+}
+.toggle{
+    height: 100%;
+    background: linear-gradient(to right, var(--nextColor),var(--bgLightColor));
+    position: relative;
+    color: #fff;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+.login-page.active .toggle{
+    transform: translateX(50%);
+}
+.toggle-panel{
+    line-height: 2.5;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 20px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+.toggle-left{
+    transform: translateX(-200%);
+
+}
+.login-page.active .toggle-left{
+    transform: translateX(0);
+}
+.toggle-right{
+    right: 0;
+    transform: translateX(0);
+    
+}
+.login-page.active .toggle-right{
+    transform: translateX(200%);
+}
 
 .finishedTasks{
     background: #333;
 }
 .footer{
     background: #55838f;
+}
+
+@keyframes move {
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }    
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+    
 }
