--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@ section{
     justify-content: center;
     scroll-snap-align: start;
 }
-
+.home{
+    overflow-x: hidden;
+}
 header{
     position: fixed;
     width: 99%;
@@ -138,15 +140,16 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .login-page{
-    position: relative;
+    position: absolute;
     background-color: var(--bg-color); 
     width: 768px;
     overflow: hidden;
     max-width: 100%;
     min-height: 480px;
-    border-radius: 0.6rem;
+    border-radius: 0.7rem;
     box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.35);
     
 }
@@ -274,6 +277,361 @@ header{
 .login-page.active .toggle-right{
     transform: translateX(200%);
 }
+.container-ring{
+    position: absolute;
+    top: 54%;
+    left: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+    transition: 0.5s ease-in-out;
+    transform-style: preserve-3d;
+    user-select: none;
+    cursor: pointer;
+    transform: rotateX(45deg) rotateY(-30deg);
+    z-index: 3;
+}
+.container-ring:hover{
+    transform: rotateX(45deg) rotateY(-30deg) scale(1.3);
+
+}
+.container-ring .ring{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    mask: radial-gradient(#0000 var(--i), #000 var(--i), #000 var(--o), #0000 var(--o));
+    transition: 0.3s;
+}
+.container-ring .r01{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 70%;
+    --o: 71%;
+}
+.container-ring .r02{
+    background: conic-gradient(
+        #0ff 5%, #0000 5%,#0000 9%, #0ff 09%,
+        #0ff 20%, #0000 20%,#0000 25%, #0ff 25%,
+        #0ff 37%, #0000 37%,#0000 42%, #0ff 42%,
+        #0ff 49%, #0000 49%,#0000 55%, #0ff 55%,
+        #0ff 65%, #0000 65%,#0000 72%, #0ff 72%,
+        #0ff 80%, #0000 80%,#0000 86%, #0ff 86%,
+        #0ff 95%, #0000 95%
+        );
+    --i: 57%;
+    --o: 60%;
+
+    animation: anime 7s ease-in-out infinite alternate;
+}
+.container-ring:hover .r02{
+    transform: translateZ(50px);
+}
+.container-ring .r03{
+    background: conic-gradient(#ffd000 85%, #0000 85%);
+    --i: 50%;
+    --o: 50.7%;
+    animation: anime 5s ease-in-out infinite alternate;
+}
+.container-ring .r04{
+    background: conic-gradient(
+        #0000 35%, #0ff 35%,#0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 71%, #0000 71%,
+        );
+    --i: 47%;
+    --o: 44%;
+    animation: anime 3s ease-in-out infinite alternate;
+}
+.container-ring .r051{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 85%, #0000 85%,
+        );
+    --i: 40%;
+    --o: 40%;
+}
+.container-ring .r052{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 35%, #0000 35%,
+        #0000 67%, #0ff 67%,#0ff 95%, #0000 95%,
+        );
+    --i: 30%;
+    --o: 30.5%;
+}
+.container-ring .r06{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 85%, #0000 85%,
+        );
+    --i: 37.5%;
+    --o: 38%;
+}
+.container-ring .r07{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 16%;
+    --o: 17.3%;
+    animation: anime 2s ease-in-out infinite alternate;
+}
+.container-ring .r08{
+    background: conic-gradient(#ffd000 75%, #0000 75%);
+    --i: 10%;
+    --o: 11%;
+    animation: anime 1s ease-in-out infinite alternate;
+}
+.container-ring .r09{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 3%;
+    --o: 3.4%;
+    animation: anime 5s ease-in-out infinite alternate;
+}
+
+.container-ring:hover .r08,
+.container-ring:hover .r09{
+    transform: translateZ(120px);
+}
+.container-ring:hover .r07{
+    transform: translateZ(100px);
+}
+.container-ring:hover .r04,
+.container-ring:hover .r051,
+.container-ring:hover .r052{
+    transform: translateZ(50px);
+}
+/* Container ring 2 */
+.container-ring2{
+    position: absolute;
+    top: 0;
+    right: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+    transition: 0.5s ease-in-out;
+    transform-style: preserve-3d;
+    user-select: none;
+    cursor: pointer;
+    transform: rotateX(45deg) rotateY(-30deg);
+    z-index: 6;
+}
+.container-ring2:hover{
+    transform: rotateX(45deg) rotateY(-30deg) scale(1.3);
+
+}
+.container-ring2 .ring{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    mask: radial-gradient(#0000 var(--i), #000 var(--i), #000 var(--o), #0000 var(--o));
+    transition: 0.3s;
+}
+.container-ring2 .r01{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 70%;
+    --o: 71%;
+}
+.container-ring2 .r02{
+    background: conic-gradient(
+        #0ff 5%, #0000 5%,#0000 9%, #0ff 09%,
+        #0ff 20%, #0000 20%,#0000 25%, #0ff 25%,
+        #0ff 37%, #0000 37%,#0000 42%, #0ff 42%,
+        #0ff 49%, #0000 49%,#0000 55%, #0ff 55%,
+        #0ff 65%, #0000 65%,#0000 72%, #0ff 72%,
+        #0ff 80%, #0000 80%,#0000 86%, #0ff 86%,
+        #0ff 95%, #0000 95%
+        );
+    --i: 57%;
+    --o: 60%;
+
+    animation: anime 7s ease-in-out infinite alternate;
+}
+.container-ring2:hover .r02{
+    transform: translateZ(50px);
+}
+.container-ring2 .r03{
+    background: conic-gradient(#ffd000 85%, #0000 85%);
+    --i: 50%;
+    --o: 50.7%;
+    animation: anime 5s ease-in-out infinite alternate;
+}
+.container-ring2 .r04{
+    background: conic-gradient(
+        #0000 35%, #0ff 35%,#0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 71%, #0000 71%,
+        );
+    --i: 47%;
+    --o: 44%;
+    animation: anime 3s ease-in-out infinite alternate;
+}
+.container-ring2 .r051{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 85%, #0000 85%,
+        );
+    --i: 40%;
+    --o: 40%;
+}
+.container-ring2 .r052{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 35%, #0000 35%,
+        #0000 67%, #0ff 67%,#0ff 95%, #0000 95%,
+        );
+    --i: 30%;
+    --o: 30.5%;
+}
+.container-ring2 .r06{
+    background: conic-gradient(
+        #0000 20%, #0ff 20%, #0ff 40%, #0000 40%,
+        #0000 67%, #0ff 67%,#0ff 85%, #0000 85%,
+        );
+    --i: 37.5%;
+    --o: 38%;
+}
+.container-ring2 .r07{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 16%;
+    --o: 17.3%;
+    animation: anime 2s ease-in-out infinite alternate;
+}
+.container-ring2 .r08{
+    background: conic-gradient(#ffd000 75%, #0000 75%);
+    --i: 10%;
+    --o: 11%;
+    animation: anime 1s ease-in-out infinite alternate;
+}
+.container-ring2 .r09{
+    background: conic-gradient(#0ff 100%, #0000 100%);
+    --i: 3%;
+    --o: 3.4%;
+    animation: anime 5s ease-in-out infinite alternate;
+}
+
+.container-ring2:hover .r08,
+.container-ring2:hover .r09{
+    transform: translateZ(120px);
+}
+.container-ring2:hover .r07{
+    transform: translateZ(100px);
+}
+.container-ring2:hover .r04,
+.container-ring2:hover .r051,
+.container-ring2:hover .r052{
+    transform: translateZ(50px);
+}
+.container-cup{
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    z-index: -1;
+}
+.cup{
+    position: relative;
+    width: 280px;
+    height: 300px;
+    background: linear-gradient(to right, var(--nextColor), var(--bgLightColor));
+    border-bottom-left-radius: 45%;
+    border-bottom-right-radius: 45%;
+}
+.top-part{
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(to right, #f9f9f9, #f9f9d9);
+    border-radius: 50%;
+}
+.top-part .circle{
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    width: calc(100% - 20px);
+    height: 50px;
+    background: linear-gradient(to left, #f9f9f9, #f9f9d9);
+    border-radius: 50%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+.top-part .circle .tea{
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#c57e65, #e28462);
+    border-radius: 50%;
+}
+.handle{
+    position: absolute;
+    right: -70px;
+    top: 40px;
+    width: 160px;
+    height: 180px;
+    border: 25px solid var(--bgLightColor);
+    border-left: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-radius: 50%;
+    transform: rotate(42deg);
+}
+.plate{
+    position: absolute;
+    bottom: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 200px;
+    background: linear-gradient(to right, #f9f9f9, #e7e7e7);
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow: 0 35px 35px rgba(0, 0, 0, 0.2);
+}
+.plate::before{
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50%;
+    background: linear-gradient(to left, #f9f9f9, #e7e7e7); 
+    /* background: linear-gradient(to right, #584848, #8b8888); */
+}
+.plate::after{
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 50%;
+    background: radial-gradient(rgba(0,0,0,0.2) 25%, transparent, transparent); 
+}
+.vapour{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    padding: 0 20px;
+}
+.vapour span{
+    position: relative;
+    bottom: 50px;
+    display: block;
+    margin: 0 2px 50px;
+    min-width: 6px;
+    height: 120px;
+    background: var(--btn-color);
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+    opacity: 0;
+    filter: blur(10px);
+    animation-delay: calc(var(--i) * -0.5s);
+}
+
 
 .finishedTasks{
     background: #333;
@@ -281,7 +639,24 @@ header{
 .footer{
     background: #55838f;
 }
-
+@keyframes animate {
+    0%{
+        transform: translateY(0) scaleX(1);
+        opacity: 0;
+    }
+    15%{
+        opacity: 1;
+    }
+    50%{
+        transform: translateY(-150px) scaleX(5);
+    }
+    95%{
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(-300px) scaleX(10);
+    }
+}
 @keyframes move {
     0%, 49.99%{
         opacity: 0;
@@ -292,4 +667,9 @@ header{
         z-index: 5;
     }
     
+}
+@keyframes anime {
+    to{
+        rotate: 360deg;
+    }
 }
