--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@
 }
 
 .container{
+    position: relative;
     height: 100vh;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
 }
-section{
+section{  
     height: 100vh;
     width: 100%;
     display: flex;
@@ -634,8 +635,44 @@ header{
 
 
 .finishedTasks{
-    background: #333;
+    /* background: #333; */
 }
+.task-pane{
+    position: relative;
+    top: 80px;
+    max-width: 1400px;
+    width: 1400px;
+    height: calc(100% - 80px);
+    margin: 0 auto;
+    padding: 10px;
+    background: #cdd6d8;
+   
+    display: grid;
+    grid-template-areas: 
+    'top-widget top-widget top-widget'
+    'main-widget main-widget aside-widget'
+    'main-widget main-widget aside-widget'
+    ;
+    grid-template-columns: 1fr 4fr 2fr;
+    grid-template-rows: 1fr 3fr 1fr;
+}
+.task-pane .top-widget,
+.task-pane .main-widget,
+.task-pane .aside-widget{
+    color: #fff;
+    padding: 20px;
+    border: 1px skyblue solid;
+}
+.task-pane .top-widget{
+    grid-area: top-widget;
+}
+.task-pane .main-widget{
+    grid-area: main-widget;
+}
+.task-pane .aside-widget{
+    grid-area: aside-widget;
+}
+
 .footer{
     background: #55838f;
 }
