--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ header{
     cursor: pointer;
     transform: rotateX(45deg) rotateY(-30deg);
     z-index: 3;
+    visibility: hidden;
 }
 .container-ring:hover{
     transform: rotateX(45deg) rotateY(-30deg) scale(1.3);
@@ -416,6 +417,7 @@ header{
     cursor: pointer;
     transform: rotateX(45deg) rotateY(-30deg);
     z-index: 6;
+    visibility: hidden;
 }
 .container-ring2:hover{
     transform: rotateX(45deg) rotateY(-30deg) scale(1.3);
