--- a/static/css/style.css
+++ b/static/css/style.css
@@ -439,7 +439,7 @@ header{
     position: absolute;
     inset: 5px;
     border-radius: 8px;
-    background-image: url("th.jpeg");
+    background-image: url("/static/images/th.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
