--- a/static/css/login.css
+++ b/static/css/login.css
@@ -4,14 +4,189 @@
     box-sizing: border-box;
 }
 body{
-    background-image: linear-gradient(200deg,#45475a 20%, #99b0d1 50%); 
+    position: relative;
+    background: var(--bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
+}
+:root{
+    --bg-color:  linear-gradient(120deg, #cdaae4, #f1f3f7);
+    --home-bg-color: linear-gradient(120deg, #393952, #222535);
+    --btn-color:  #9741cc;
+    --primaryBgColor:  linear-gradient(120deg, #32343f, #293138);
+    --nextColor: #403234;
+}
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    border-radius: 8px;
+    box-shadow: 5px 5px 5px  rgba(173, 167, 167, 0.6);
+}
+.navigation{
+    position: relative;
+    top: 1px;
+    width: 350px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.5rem;
+    
+}
+.navigation ul{
+    position: relative;
+    display: flex;
+    width: 300px;
+}
+.navigation ul li{
+    position: relative;
+    list-style: none;
+    width: 80px;
+    height: 80px;
+
+}
+.navigation ul li a{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    font-weight: 500;
+
+}
+.navigation ul li a .icon{
+    position: relative;
+    display: block;
+    line-height: 85px;
+    font-size: 1.5em;
+    transition: 0.5s;
+    text-align: center;
+    color: #fff;
+}
+.navigation ul li a:hover .icon{
+    color: var(--btn-color);
+}
+.navigation ul li.active a .icon{
+    color: var(--btn-color);
+    transform: translateY(-8px);
+}
+.navigation ul li a .text{
+    position: absolute;
+    font-weight: 600;
+    font-size: 0.7em;
+    text-transform: uppercase;
+    transform: translateY(0px);
+    letter-spacing: 0.05em;
+    opacity: 0;
+    z-index: 10;
+    color: #fff;
+
+}
+.navigation ul li.active a .text{
+    opacity: 1;
+    transform: translateY(16px);
+
+}
+.indicator{
+    position: absolute;
+    width: 90px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.5s;
+
+}
+.indicator::before{
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: -5px;
+    width: 100%;
+    height: 16px;
+    background: var(--btn-color);
+    border-radius: 0.75rem;
+    padding: 0px 0 5px ;
+
+
+}
+.navigation ul li:nth-child(2).active ~ .indicator{
+    transform: translateX(calc(80px * 1));
+}
+.navigation ul li:nth-child(3).active ~ .indicator{
+    transform: translateX(calc(80px * 2));
+}
+#loginBtn{
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    background: var(--btn-color);
+    color: #fff;
+    border-radius: 8px;
+    padding: 12px 24px;
+    border: none;
+    outline: 0;
+
+}
+#loginBtn:hover{
+    background: #9a6eb6;
+    opacity: .7;
+}
+.page-description{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.page-description img{
+    width: 350px;
+    height: 250px;
+    mix-blend-mode: multiply;
+}
+.page-description h4{
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+.page-description p{
+    font-size: 1.5rem;
+    line-height: 32px;
+    color: #776f6f;
+    font-style: italic;
+    font-weight: 700;
+}
+.page-description button{
+    background: var(--btn-color);
+    color: #fff;
+    border-radius: 8px;
+    padding: 12px 24px;
+    margin-bottom: 10px;
+    border: none;
+    outline: 0;
+
+}
+.page-description button:hover{
+    background: #9a6eb6;
+    opacity: .7;
 }
 .container{
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)scale(0);
     background-color: #fff; 
     width: 768px;
     overflow: hidden;
@@ -19,10 +194,34 @@ body{
     min-height: 480px;
     border-radius: 0.6rem;
     box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.35);
-    
+    transition: all 1s ease-in-out;
+    visibility: hidden;
+}
+.showContainer{
+    transform: translate(-50%, -50%) scale(1);
+    visibility: visible;
+} 
+.container .hide-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;   
+}
+.container .hide-btn ion-icon{
+    font-size: 2.6rem;
+    color: rgb(224, 196, 196);
+}
+.container .hide-btn ion-icon:hover{
+    font-size: 2rem;
+    color: #f00;
 }
 .container button{
-    background-color: rgb(118, 148, 88);
+    background-color: var(--btn-color);
     color: #fff;
     padding: 10px 20px;
     border: 1px solid transparent;
@@ -33,7 +232,7 @@ body{
     cursor: pointer;
 }
 .container button.hidden{
-    background-color: transparent;
+    background-color: var(--btn-color);
     border-color: #fff;
 
 }
@@ -102,9 +301,8 @@ body{
     border-radius: 0 100px 100px 0;
 }
 .toggle{
-    background-color: #512a85;
     height: 100%;
-    background: linear-gradient(to right, #79a07f,#6a4996);
+    background: var(--home-bg-color);
     position: relative;
     color: #fff;
     left: -100%;
@@ -146,11 +344,6 @@ body{
 .container.active .toggle-right{
     transform: translateX(200%);
 }
-
-
-
-
-
 
 @keyframes move {
     0%, 49.99%{
