--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,56 @@ header{
     box-shadow: 5px 5px 5px  rgba(173, 167, 167, 0.6);
     z-index: 999;
 }
+
+/* Dropdown Button */
+.profile-button {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 160px;
+    transform: translateY(-50%);
+    background-color: #f1f1f1;
+    color: black;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    display: block;
+  }
+  
+  .profile-button:hover, .profile-button:focus {
+    background-color: #ddd;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    position: absolute;
+    top: 66px;
+    right: 10px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .profile:hover .dropdown-content {
+    display: block;
+  }
+  
 .navigation{
     position: relative;
     top: 1px;
