--- a/static/css/style.css
+++ b/static/css/style.css
@@ -661,6 +661,40 @@ header{
         transform: rotate(360deg);
     }
 }
+.toast {
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    color: #21b94f;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 999;
+}
+
+.toast-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.progress-bar {
+    position: relative;
+    width: 100%;
+    height: 5px;
+    background-color: #37e078;
+    margin-top: 10px;
+    border-radius: 2px;
+    animation: progress 6s linear forwards;
+}
+
+@keyframes progress {
+    0% { width: 100%; }
+    100% { width: 0; }
+}
 
 .task-pane{
     position: relative;
@@ -761,19 +795,23 @@ header{
 .task-pane .main-widget-list .table-header thead tr th:last-child{
     border-top-right-radius: 8px;
 }
-.task-pane .main-widget-list .display{
+.task-pane .main-widget-list .display table{
     width: 100%;
     height: 435px;
-    overflow: auto;
+    overflow: scroll;
 }
-.task-pane .main-widget-list .display tbody{
+.task-pane .main-widget-list .display #task-table{
     background: rgb(139, 151, 151);
+    color: red;
 }
-.task-pane .main-widget-list .display tbody td{
+.task-pane .main-widget-list .display #task-table tr{
+    background-color: #d5e6da;
+}
+.task-pane .main-widget-list .display #task-table td{
     padding: 4px 15px;
     vertical-align: middle;
     font-weight: 500;
-    border-bottom: 2px solid #eee;;
+    color: #000;
 }
 
 /* scroll bar */
