--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,7 +471,14 @@ header{
     outline: none;
 
 }
-
+.nilTask{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    color : #d64b4b;
+    
+}
 .dashboard .aside-widget{
     grid-area: aside-widget;
     padding: 5px;
@@ -638,6 +645,9 @@ header{
     position: absolute;
     bottom: 3px;
     left: 3px;
+}
+.on-progress-nil{
+    color : #d64b4b;
 }
 @keyframes rotate {
     0%{
@@ -819,6 +829,8 @@ header{
     display: flex;
     width: 100%;
     border-bottom: 2px solid #fff;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Set flex basis for each column */
@@ -854,22 +866,30 @@ header{
 }
 
 #tasks-table-body tr td:last-child {
+    position: relative;
     flex-basis: calc(5% / 9 * 100);
     display: flex;
+    align-items: center;
     justify-content: center;
-    column-gap: 10px;
 }
-#tasks-table-body tr td:last-child ion-icon:nth-child(1) {
-    color: #d85360;
-    font-size: 1.2rem;
+#tasks-table-body tr td div{
+    width: 100%; 
 }
-#tasks-table-body tr td:last-child ion-icon:nth-child(1):hover,
-#tasks-table-body tr td:last-child ion-icon:nth-child(1):focus,
-#tasks-table-body tr td:last-child ion-icon:nth-child(1):visited {
-    /* Add styles for hover, focus, and visited states */
-    /* For example, you can change the color or add a transition */
-    color: #ff0000; /* Red color */
-    transform: scale(1.3); /* Example: scale icon on hover/focus */
+#tasks-table-body tr td div ion-icon {
+    color: #78e0b5 !important;
+}
+#tasks-table-body tr td div ion-icon:nth-child(1):hover,
+#tasks-table-body tr td div ion-icon:nth-child(1):focus {
+    color: #28fda4 !important; /* Change the color on hover or focus */
+    transform: scale(1.2); /* Scale the icon on hover or focus */
+}
+#tasks-table-body tr td div ion-icon:nth-child(2):hover,
+#tasks-table-body tr td div ion-icon:nth-child(2):focus {
+    transform: scale(1.2); /* Scale the icon on hover or focus */
+}
+#tasks-table-body tr td div ion-icon:nth-child(3):hover,
+#tasks-table-body tr td div ion-icon:nth-child(3):focus {
+    transform: scale(1.2); /* Scale the icon on hover or focus */
 }
 
 /* scroll bar */
