--- a/static/css/style.css
+++ b/static/css/style.css
@@ -878,6 +878,7 @@ header{
 #tasks-table-body tr td div ion-icon {
     color: #78e0b5 !important;
 }
+
 #tasks-table-body tr td div ion-icon:nth-child(1):hover,
 #tasks-table-body tr td div ion-icon:nth-child(1):focus {
     color: #28fda4 !important; /* Change the color on hover or focus */
@@ -1081,7 +1082,67 @@ header{
     background: var(--btn-color);
     border-radius: 8px;
     color: #f0e7e7;
-} 
+}
+.edit-form-container {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  #closeBtn{
+    position: absolute;
+    top: 3px;
+    right: 0;
+    width: 40px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #closeBtn ion-icon{
+    font-size: 20px;
+  }
+  #closeBtn ion-icon:hover{
+    transform: scale(1.2);
+  }
+  .form-group {
+    margin-bottom: 20px;
+  }
+  .form-group label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  .form-group input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+  }
+  .form-group textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+    resize: vertical;
+  }
+  .form-group button {
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+
 .footer-pane{
     position: relative;
     top: 80px;
